--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,5 @@
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff",
-  "test": "#ffffff"
+  "test2": "#ffffff"
 }
